--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>testproj</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
+	<!--feed4j test demo-->
 	<name>testproj</name>
 	<url>http://maven.apache.org</url>
 
